--- a/azdo_pipelines/build-train.yml
+++ b/azdo_pipelines/build-train.yml
@@ -34,7 +34,7 @@ steps:
     SourceFolder: '$(Build.SourcesDirectory)'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
     Contents: |
-      aml_pipelines/**/'?(run_train_pipeline.py|*.json)'  
+      aml_pipelines/'?(run_train_pipeline.py|*.json)'  
       code/scoring/**
 
 - task: PublishBuildArtifacts@1
