--- a/.pipelines/azdo-ci-build-train.yml
+++ b/.pipelines/azdo-ci-build-train.yml
@@ -17,7 +17,7 @@ variables:
 
 
 steps:
-- template: base-pipeline.yml
+- template: azdo-base-pipeline.yml
     
 - bash: |
    # Invoke the Python building and publishing a training pipeline
