--- a/environment_setup/iac-create-environment.yml
+++ b/environment_setup/iac-create-environment.yml
@@ -10,21 +10,19 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  baseName: $[coalesce(variables['baseNameOverride'], 'mlops')]
-  location: $[coalesce(variables['locationOverride'], 'centralus')]
-  azuresub: $[coalesce(variables['azuresubOverride'], 'AzureResourceConnection')]
+- group: devopsforai-aml-vg
 
 
 steps:
 - task: AzureResourceGroupDeployment@2
   inputs:
-    azureSubscription: $(azuresub)
+    azureSubscription: 'AzureResourceConnection'
     action: 'Create Or Update Resource Group'
-    resourceGroupName: '$(baseName)-AML-RG'
-    location: $(location)
+    resourceGroupName: '$(RESOURCE_GROUP)'
+    location: $(LOCATION)
     templateLocation: 'Linked artifact'
     csmFile: '$(Build.SourcesDirectory)/environment_setup/arm-templates/cloud-environment.json'
-    overrideParameters: '-baseName $(baseName)'
+    overrideParameters: '-baseName $(BASE_NAME)'
     deploymentMode: 'Incremental'
   displayName: 'Deploy MLOps resources to Azure'
 
