--- a/.pipelines/azdo-pr-build-train.yml
+++ b/.pipelines/azdo-pr-build-train.yml
@@ -8,7 +8,7 @@ pool:
   vmImage: 'ubuntu-latest'
 
 container:
-  image: mlopscr.azurecr.io/public/mlops/mlopspython:latest
+  image: mcr.microsoft.com/mlops/python:latest
   endpoint: acrconnection
 
 
