--- a/.pipelines/azdo-pr-build-train.yml
+++ b/.pipelines/azdo-pr-build-train.yml
@@ -7,9 +7,7 @@ pr:
 pool: 
   vmImage: 'ubuntu-latest'
 
-container:
-  image: mcr.microsoft.com/mlops/python:latest
-  endpoint: acrconnection
+container: mcr.microsoft.com/mlops/python:latest  
 
 
 variables:
