--- a/environment_setup/Dockerfile
+++ b/environment_setup/Dockerfile
@@ -7,6 +7,10 @@ LABEL org.label-schema.vendor = "Microsoft" \
        
 
 COPY environment_setup/requirements.txt  /setup/
+
+COPY environment_setup/python.sh /usr/local/sbin/python.sh
+RUN rm /usr/local/bin/python && ln -s /usr/local/sbin/python.sh /usr/local/bin/python
+
 	
 RUN apt-get update && apt-get install gcc -y && pip install --upgrade -r /setup/requirements.txt   
 
