added model version as variable

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,7 @@ AML_CLUSTER_MIN_NODES = ''
 AML_CLUSTER_PRIORITY = 'lowpriority'
 # Training Config
 MODEL_NAME = ''
+MODEL_VERSION = ''
 # AML Pipeline Config
 TRAINING_PIPELINE_NAME = ''
 PIPELINE_CONDA_PATH = 'aml_config/conda_dependencies.yml'
