Unique Base Name  (#60)
Have a unique base name ENV var to avoid Azure resource naming conflicts.

--- a/environment_setup/iac-create-environment.yml
+++ b/environment_setup/iac-create-environment.yml
@@ -18,7 +18,7 @@ steps:
   inputs:
     azureSubscription: 'AzureResourceConnection'
     action: 'Create Or Update Resource Group'
-    resourceGroupName: '$(RESOURCE_GROUP)'
+    resourceGroupName: '$(BASE_NAME)-AML-RG'
     location: $(LOCATION)
     templateLocation: 'Linked artifact'
     csmFile: '$(Build.SourcesDirectory)/environment_setup/arm-templates/cloud-environment.json'
