--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,43 @@
 # Azure Subscription Variables
-WORKSPACE_NAME = ''
-RESOURCE_GROUP = ''
 SUBSCRIPTION_ID = ''
 LOCATION = ''
 TENANT_ID = ''
+BASE_NAME = ''
+SP_APP_ID = ''
+SP_APP_SECRET = ''
+
+# Mock build/release ID for local testing - update ReleaseID each "release"
+BUILD_BUILDID = '001'
+RELEASE_RELEASEID = '001'
 
 # Azure ML Workspace Variables
 EXPERIMENT_NAME = ''
 SCRIPT_FOLDER = './'
-BLOB_STORE_NAME = ''
+
+# AML Compute Cluster Config
+AML_COMPUTE_CLUSTER_NAME = ''
+AML_COMPUTE_CLUSTER_CPU_SKU = ''
+AML_CLUSTER_MAX_NODES = ''
+AML_CLUSTER_MIN_NODES = ''
+AML_CLUSTER_PRIORITY = 'lowpriority'
+# Training Config
+MODEL_NAME = 'sklearn_regression_model.pkl'
+MODEL_VERSION = '1'
+TRAIN_SCRIPT_PATH = 'training/train.py'
+# AML Pipeline Config
+TRAINING_PIPELINE_NAME = ''
+PIPELINE_CONDA_PATH = 'aml_config/conda_dependencies.yml'
+MODEL_PATH = ''
+EVALUATE_SCRIPT_PATH = 'evaluate/evaluate_model.py'
+REGISTER_SCRIPT_PATH = 'register/register_model.py'
+SOURCES_DIR_TRAIN = 'code'
+
+# These are not mandatory for the core workflow
 # Remote VM Config
 REMOTE_VM_NAME = ''
 REMOTE_VM_USERNAME = ''
 REMOTE_VM_PASSWORD = ''
 REMOTE_VM_IP = ''
-# AML Compute Cluster Config
-AML_CLUSTER_NAME = ''
-AML_CLUSTER_VM_SIZE = ''
-AML_CLUSTER_MAX_NODES = ''
-AML_CLUSTER_MIN_NODES = ''
-AML_CLUSTER_PRIORITY = 'lowpriority'
-# Training Config
-MODEL_NAME = ''
-MODEL_VERSION = ''
-# AML Pipeline Config
-TRAINING_PIPELINE_NAME = ''
-PIPELINE_CONDA_PATH = 'aml_config/conda_dependencies.yml'
-MODEL_PATH = ''
 # Image config
 IMAGE_NAME = ''
 IMAGE_DESCRIPTION = ''
