--- a/environment_setup/docker-image-pipeline.yml
+++ b/environment_setup/docker-image-pipeline.yml
@@ -21,7 +21,7 @@ steps:
   - task: Docker@2
     displayName: Build and Push
     inputs:
-      command: build
+      command: buildAndPush
       containerRegistry: '$(containerRegistry)'
       repository: '$(imageName)'
       tags: 'latest'
