--- a/.pipelines/azdo-ci-build-train.yml
+++ b/.pipelines/azdo-ci-build-train.yml
@@ -16,6 +16,7 @@ variables:
 
 steps:
 - template: azdo-base-pipeline.yml
+  enabled: 'false'
     
 - bash: |
    # Invoke the Python building and publishing a training pipeline
