--- a/.pipelines/azdo-ci-build-train.yml
+++ b/.pipelines/azdo-ci-build-train.yml
@@ -15,10 +15,21 @@ variables:
 
 
 steps:
-    
+
+- template: azdo-base-pipeline.yml
+
 - bash: |
-   # Invoke the Python building and publishing a training pipeline
+   # Invoke the Python building and publishing a training pipeline with Python on ML Compute
    python3 $(Build.SourcesDirectory)/ml_service/pipelines/build_train_pipeline.py
+  failOnStderr: 'false'
+  env:
+    SP_APP_SECRET: '$(SP_APP_SECRET)'
+  displayName: 'Publish Azure Machine Learning Pipeline'
+  enabled: 'false'
+
+- bash: |
+   # Invoke the Python building and publishing a training pipeline with R on DataBricks
+   python3 $(Build.SourcesDirectory)/ml_service/pipelines/build_train_pipeline_with_r_on_dbricks.py
   failOnStderr: 'false'
   env:
     SP_APP_SECRET: '$(SP_APP_SECRET)'
