--- a/.pipelines/azdo-ci-build-train.yml
+++ b/.pipelines/azdo-ci-build-train.yml
@@ -27,6 +27,15 @@ steps:
   displayName: 'Publish Azure Machine Learning Pipeline. Python on ML'
   enabled: 'false'
 
+  - bash: |
+   # Invoke the Python building and publishing a training pipeline with R on ML Compute
+   python3 $(Build.SourcesDirectory)/ml_service/pipelines/build_train_pipeline_with_r.py
+  failOnStderr: 'false'
+  env:
+    SP_APP_SECRET: '$(SP_APP_SECRET)'
+  displayName: 'Publish Azure Machine Learning Pipeline. R on ML Compute'
+  enabled: 'true'
+
 - bash: |
    # Invoke the Python building and publishing a training pipeline with R on DataBricks
    python3 $(Build.SourcesDirectory)/ml_service/pipelines/build_train_pipeline_with_r_on_dbricks.py
@@ -34,7 +43,7 @@ steps:
   env:
     SP_APP_SECRET: '$(SP_APP_SECRET)'
   displayName: 'Publish Azure Machine Learning Pipeline. R on DataBricks'
-  enabled: 'true'
+  enabled: 'false'
 
 - task: CopyFiles@2
   displayName: 'Copy Files to: $(Build.ArtifactStagingDirectory)'
