--- a/environment_setup/Dockerfile
+++ b/environment_setup/Dockerfile
@@ -8,6 +8,24 @@ LABEL org.label-schema.vendor = "Microsoft" \
 
 COPY environment_setup/requirements.txt  /setup/
 	
-RUN apt-get update && apt-get install gcc -y && pip install --upgrade -r /setup/requirements.txt   
+RUN apt-get update && apt-get install gcc -y && pip install --upgrade -r /setup/requirements.txt && \ 
+    conda install -c r r-essentials
+    # R --vanilla -e 'install.packages(c( "RPostgreSQL", \
+    #                                     "DBI",         \
+    #                                     "lubridate",   \
+    #                                     "RSQLite",     \
+    #                                     "magrittr",    \
+    #                                     "zoo",         \
+    #                                     "functional",  \
+    #                                     "moments",     \
+    #                                     "fpc",         \
+    #                                     "RcppRoll",    \
+    #                                     "cowplot",     \
+    #                                     "tsne",        \
+    #                                     "config",      \
+    #                                     "factoextra",  \
+    #                                     "NMF",         \
+    #                                     "ggcorrplot",  \
+    #                                     "umap"), repos="http://cran.r-project.org")'
 
 CMD ["python"]
