--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,7 @@ IMAGE_VERSION = ''
 ACI_CPU_CORES = ''
 ACI_MEM_GB = ''
 ACI_DESCRIPTION = ''
+
+# Optional. Used by a training pipeline with R on Databricks
+DB_CLUSTER_ID = ''
+DATABRICKS_COMPUTE_NAME = ''
