Include iac pr filter

--- a/environment_setup/iac-create-environment.yml
+++ b/environment_setup/iac-create-environment.yml
@@ -5,6 +5,13 @@ trigger:
   paths:
     include:
     - environment_setup/arm-templates/*
+pr:
+  branches:
+    include:
+    - master
+  paths:
+    include:
+    - environment_setup/arm-templates/*
 
 pool:
   vmImage: 'ubuntu-latest'
