--- a/.pipelines/azdo-ci-build-train.yml
+++ b/.pipelines/azdo-ci-build-train.yml
@@ -18,7 +18,7 @@ variables:
   value: 'build_train_pipeline.py'
 # Automatically triggers the train, evaluate, register pipeline after the CI steps. Set to false to disable.
 - name: auto-trigger-training
-  value: true
+  value: 'true'
 
 stages:
 - stage: 'Model_CI'
@@ -43,7 +43,7 @@ stages:
   displayName: 'Train, evaluate, register model via previously published AML pipeline'
   jobs:
   - job: "Invoke_Model_Pipeline"
-    condition: and(succeeded(), eq(variables['auto-trigger-training'], true))
+    condition: and(succeeded(), eq(variables['auto-trigger-training'], 'true'))
     displayName: "Invoke Model Pipeline and evaluate results to register"
     pool: 
       vmImage: 'ubuntu-latest'
