--- a/.pipelines/azdo-ci-build-train.yml
+++ b/.pipelines/azdo-ci-build-train.yml
@@ -16,9 +16,10 @@ variables:
 # Choose from default, build_train_pipeline_with_r.py, or build_train_pipeline_with_r_on_dbricks.py
 - name: build-train-script
   value: 'build_train_pipeline.py'
-# Automatically triggers the train, evaluate, register pipeline after the CI steps. Set to false to disable.
-- name: auto-trigger-training
-  value: true
+# Automatically triggers the train, evaluate, register pipeline after the CI steps. 
+# Uncomment to set to false or add same variable name at queue time with value of false to disable.
+# - name: auto-trigger-training
+#   value: false
 
 stages:
 - stage: 'Model_CI'
@@ -43,7 +44,7 @@ stages:
   displayName: 'Train, evaluate, register model via previously published AML pipeline'
   jobs:
   - job: "Invoke_Model_Pipeline"
-    condition: and(succeeded(), eq(variables['auto-trigger-training'], 'true'))
+    condition: and(succeeded(), eq(coalesce(variables['auto-trigger-training'], 'true'), 'true'))
     displayName: "Invoke Model Pipeline and evaluate results to register"
     pool: 
       vmImage: 'ubuntu-latest'
