--- a/code/scoring/conda_dependencies.yml
+++ b/code/scoring/conda_dependencies.yml
@@ -25,7 +25,8 @@ dependencies:
 
 - pip:
     # Required packages for AzureML execution, history, and data preparation.
-  - azureml-sdk==1.0.72
+  - azure-ml-api-sdk==0.1.0a11
+  - azureml-sdk==1.0.74
   - scipy==1.3.1
   - scikit-learn==0.21.3
   - pandas==0.25.3
