--- a/code/scoring/conda_dependencies.yml
+++ b/code/scoring/conda_dependencies.yml
@@ -33,22 +33,21 @@ dependencies:
 
   # Currently Azure ML Workbench only supports 3.5.2 and later.
 
-- python=3.6.2
+- python=3.7.5
   # Required by azureml-defaults, installed separately through Conda to
 
   # get a prebuilt version and not require build tools for the install.
 
-- psutil=5.3
+- psutil=5.6 #latest
 
 - pip:
     # Required packages for AzureML execution, history, and data preparation.
-  - azureml-sdk[notebooks]    # add the version to lock it ==0.1.74
-  - scipy==1.0.0
-  - scikit-learn==0.21.3
-  - pandas==0.23.1
-  - numpy==1.14.5
-  - joblib==0.13.2
-  - gunicorn==19.9.0
-  - flask==1.1.1
-  - azure-ml-api-sdk
-
+  - azureml-sdk==1.0.72 #1.0.72
+  - scipy==1.3.1 #1.3.1
+  - scikit-learn==0.21.3 #latest
+  - pandas==0.25.3 #0.25.3
+  - numpy==1.17.3 #1.17.3
+  - joblib==0.14.0 #0.14.0
+  - gunicorn==19.9.0 #latest
+  - flask==1.1.1 #latest
+  
