--- a/code/scoring/deployment_config_aks.yml
+++ b/code/scoring/deployment_config_aks.yml
@@ -9,7 +9,7 @@ authEnabled: True
 containerResourceRequirements:
     cpu: 1
     memoryInGB: 4
-appInsightsEnabled: True
+appInsightsEnabled: false
 scoringTimeoutMs: 5000
 maxConcurrentRequestsPerContainer: 2
 maxQueueWaitMs: 5000
