--- a/.pipelines/azdo-ci-build-train.yml
+++ b/.pipelines/azdo-ci-build-train.yml
@@ -13,8 +13,6 @@ trigger:
 variables:
 - group: devopsforai-aml-vg
 # Choose from default, build_train_pipelinewith_r.py, or build_train_pipeline_with_r_on_dbricks.py
-- name: BUILD_BUILDNUMBER2
-  value: '20191112.2'
 - name: build-train-script
   value: 'build_train_pipeline.py'
 # Automatically triggers the train, evaluate, register pipeline after the CI steps. 
@@ -23,24 +21,24 @@ variables:
 #   value: false
 
 stages:
-# - stage: 'Model_CI'
-#   displayName: 'Model CI'
-#   jobs:
-#   - job: "Model_CI_Pipeline"
-#     displayName: "Model CI Pipeline"
-#     pool: 
-#       vmImage: 'ubuntu-latest'
-#     container: mcr.microsoft.com/mlops/python:latest
-#     timeoutInMinutes: 0
-#     steps:
-#     - template: azdo-base-pipeline.yml
-#     - script: |
-#         # Invoke the Python building and publishing a training pipeline
-#         python3 $(Build.SourcesDirectory)/ml_service/pipelines/$(build-train-script)
-#       failOnStderr: 'false'
-#       env:
-#         SP_APP_SECRET: '$(SP_APP_SECRET)'
-#       displayName: 'Publish Azure Machine Learning Pipeline'
+- stage: 'Model_CI'
+  displayName: 'Model CI'
+  jobs:
+  - job: "Model_CI_Pipeline"
+    displayName: "Model CI Pipeline"
+    pool: 
+      vmImage: 'ubuntu-latest'
+    container: mcr.microsoft.com/mlops/python:latest
+    timeoutInMinutes: 0
+    steps:
+    - template: azdo-base-pipeline.yml
+    - script: |
+        # Invoke the Python building and publishing a training pipeline
+        python3 $(Build.SourcesDirectory)/ml_service/pipelines/$(build-train-script)
+      failOnStderr: 'false'
+      env:
+        SP_APP_SECRET: '$(SP_APP_SECRET)'
+      displayName: 'Publish Azure Machine Learning Pipeline'
 - stage: 'Trigger_AML_Pipeline'
   displayName: 'Train, evaluate, register model via previously published AML pipeline'
   jobs:
