Add new env vars to example

--- a/.env.example
+++ b/.env.example
@@ -5,14 +5,17 @@ TENANT_ID = ''
 BASE_NAME = ''
 SP_APP_ID = ''
 SP_APP_SECRET = ''
+RESOURCE_GROUP = ''
 
 # Mock build/release ID for local testing - update ReleaseID each "release"
 BUILD_BUILDID = '001'
 RELEASE_RELEASEID = '001'
 
 # Azure ML Workspace Variables
+WORKSPACE_NAME = 'aml-workspace'
 EXPERIMENT_NAME = ''
 SCRIPT_FOLDER = './'
+WORKSPACE_SVC_CONNECTION = 'aml-workspace-svc'
 
 # AML Compute Cluster Config
 AML_COMPUTE_CLUSTER_NAME = ''
