Refactoring Variable Code Base Usage
Simplified and cleaned-up the usage of variables inside all python files
and Azure DevOps pipelines. Variables are now defined in two places, the
Azure DevOps variable template and the Azure DevOps variable group.

- Refactored dotenv usage in a singleton class to serve variables to all
python scripts
- Created new variable template `azdo-variables.yml` to be used within
Azure DevOps pipelines
- Adjusted existing pipelines to leverage new variable template
- Prepared the ARM template to specify individual names for the various
resources

Please provide feedback, I'll update the PR with documentation
modifications

Resolves: #279075

--- a/.pipelines/azdo-ci-build-train.yml
+++ b/.pipelines/azdo-ci-build-train.yml
@@ -11,14 +11,9 @@ trigger:
     - ml_service/util/create_scoring_image.py
 
 variables:
+- template: azdo-variables.yml
 - group: devopsforai-aml-vg
-# Choose from default, build_train_pipeline_with_r.py, or build_train_pipeline_with_r_on_dbricks.py
-- name: build-train-script
-  value: 'build_train_pipeline.py'
-# Automatically triggers the train, evaluate, register pipeline after the CI steps. 
-# Uncomment to set to false or add same variable name at queue time with value of false to disable.
-# - name: auto-trigger-training
-#   value: false
+
 
 stages:
 - stage: 'Model_CI'
@@ -34,7 +29,7 @@ stages:
     - template: azdo-base-pipeline.yml
     - script: |
         # Invoke the Python building and publishing a training pipeline
-        python3 $(Build.SourcesDirectory)/ml_service/pipelines/$(build-train-script)
+        python3 $(Build.SourcesDirectory)/ml_service/pipelines/${{ variables.BUILD_TRAIN_SCRIPT }}
       failOnStderr: 'false'
       env:
         SP_APP_SECRET: '$(SP_APP_SECRET)'
