Adding Workspace in Variable Group
The workspace has now to be defined in the variable group

- Adjusted infrastructure as code template

--- a/environment_setup/iac-create-environment.yml
+++ b/environment_setup/iac-create-environment.yml
@@ -29,7 +29,7 @@ steps:
     location: $(LOCATION)
     templateLocation: 'Linked artifact'
     csmFile: '$(Build.SourcesDirectory)/environment_setup/arm-templates/cloud-environment.json'
-    overrideParameters: '-baseName $(BASE_NAME) -location $(LOCATION)'
+    overrideParameters: '-baseName $(BASE_NAME) -location $(LOCATION) -workspace $(WORKSPACE_NAME)'
     deploymentMode: 'Incremental'
   displayName: 'Deploy MLOps resources to Azure'
 
