fix build_id flow

--- a/.pipelines/azdo-ci-build-train.yml
+++ b/.pipelines/azdo-ci-build-train.yml
@@ -55,7 +55,7 @@ stages:
         source $(Build.SourcesDirectory)/tmp.sh
         echo "##vso[task.setvariable variable=AMLPIPELINEID;isOutput=true]$AMLPIPELINE_ID"
       name: 'getpipelineid'
-      displayName: 'Trigger Training Pipeline'
+      displayName: 'Get Pipeline ID'
       env:
         SP_APP_SECRET: '$(SP_APP_SECRET)'
   - job: "Run_ML_Pipeline"
