local agent, eval tweaks

--- a/.pipelines/azdo-ci-build-train.yml
+++ b/.pipelines/azdo-ci-build-train.yml
@@ -26,8 +26,8 @@ stages:
   jobs:
   - job: "Model_CI_Pipeline"
     displayName: "Model CI Pipeline"
-    pool: 
-      vmImage: 'ubuntu-latest'
+    pool: 'davete'
+      # vmImage: 'ubuntu-latest'
     container: mcr.microsoft.com/mlops/python:latest
     timeoutInMinutes: 0
     steps:
@@ -45,8 +45,8 @@ stages:
   - job: "Get_Pipeline_ID"
     condition: and(succeeded(), eq(coalesce(variables['auto-trigger-training'], 'true'), 'true'))
     displayName: "Get Pipeline ID for execution"
-    pool: 
-      vmImage: 'ubuntu-latest'
+    pool: 'davete'
+      # vmImage: 'ubuntu-latest'
     container: mcr.microsoft.com/mlops/python:latest
     timeoutInMinutes: 0
     steps:
@@ -75,8 +75,8 @@ stages:
   - job: "Training_Run_Report"
     dependsOn: "Run_ML_Pipeline"
     displayName: "Determine if evaluation succeeded and new model is registered"
-    pool: 
-      vmImage: 'ubuntu-latest'
+    pool: 'davete'
+      # vmImage: 'ubuntu-latest'
     container: mcr.microsoft.com/mlops/python:latest
     timeoutInMinutes: 0
     steps:
