--- a/.pipelines/azdo-ci-build-train.yml
+++ b/.pipelines/azdo-ci-build-train.yml
@@ -26,9 +26,9 @@ stages:
   jobs:
   - job: "Model_CI_Pipeline"
     displayName: "Model CI Pipeline"
-    pool: 'davete'
-      # vmImage: 'ubuntu-latest'
-    # container: mcr.microsoft.com/mlops/python:latest
+    pool:
+      vmImage: 'ubuntu-latest'
+    container: mcr.microsoft.com/mlops/python:latest
     timeoutInMinutes: 0
     steps:
     - template: azdo-base-pipeline.yml
@@ -45,9 +45,9 @@ stages:
   - job: "Get_Pipeline_ID"
     condition: and(succeeded(), eq(coalesce(variables['auto-trigger-training'], 'true'), 'true'))
     displayName: "Get Pipeline ID for execution"
-    pool: 'davete'
-      # vmImage: 'ubuntu-latest'
-    # container: mcr.microsoft.com/mlops/python:latest
+    pool:
+      vmImage: 'ubuntu-latest'
+    container: mcr.microsoft.com/mlops/python:latest
     timeoutInMinutes: 0
     steps:
     - script: |
@@ -75,9 +75,9 @@ stages:
   - job: "Training_Run_Report"
     dependsOn: "Run_ML_Pipeline"
     displayName: "Determine if evaluation succeeded and new model is registered"
-    pool: 'davete'
-      # vmImage: 'ubuntu-latest'
-    # container: mcr.microsoft.com/mlops/python:latest
+    pool:
+      vmImage: 'ubuntu-latest'
+    container: mcr.microsoft.com/mlops/python:latest
     timeoutInMinutes: 0
     steps:
     - script: |
