--- a/.pipelines/azdo-variables.yml
+++ b/.pipelines/azdo-variables.yml
@@ -1,8 +1,8 @@
 variables:
-- name: DEVOPS_VARIABLEGROUP
-  value: devopsforai-aml-vg
-- name: BUILD_TRAIN_SCRIPT
-  value: build_train_pipeline.py
+  # Azure ML Workspace Variables
+- name: EXPERIMENT_NAME
+  value: mlopspython
+  # AML Compute Cluster Config
 - name: AML_COMPUTE_CLUSTER_CPU_SKU
   value: STANDARD_DS2_V2
 - name: AML_COMPUTE_CLUSTER_NAME
@@ -13,29 +13,28 @@ variables:
   value: 4
 - name: AML_CLUSTER_PRIORITY
   value: lowpriority
-- name: EVALUATE_SCRIPT_PATH
-  value: evaluate/evaluate_model.py
-- name: EXPERIMENT_NAME
-  value: mlopspython
+  # Training Config
+- name: BUILD_TRAIN_SCRIPT
+  value: build_train_pipeline.py
+- name: TRAIN_SCRIPT_PATH
+  value: training/train.py
 - name: MODEL_NAME
   value: sklearn_regression_model.pkl
 - name: MODEL_VERSION
   value: '1'
+  # AML Pipeline Config 
+- name: TRAINING_PIPELINE_NAME
+  value: 'Training Pipeline'
 - name: MODEL_PATH
   value: ''
+- name: EVALUATE_SCRIPT_PATH
+  value: evaluate/evaluate_model.py
 - name: REGISTER_SCRIPT_PATH
   value: register/register_model.py
 - name: SOURCES_DIR_TRAIN
   value: code
-- name: TRAIN_SCRIPT_PATH
-  value: training/train.py
-- name: TRAINING_PIPELINE_NAME
-  value: training-pipeline
-- name: BUILD_BUILDID
-  value: 001
-- name: RELEASE_RELEASEID
-  value: 001
 - name: IMAGE_NAME
   value: ''
+  # Optional. Used by a training pipeline with R on Databricks
 - name: DB_CLUSTER_ID
   value: ''
