--- a/environment_setup/iac-remove-environment.yml
+++ b/environment_setup/iac-remove-environment.yml
@@ -18,7 +18,7 @@ steps:
   inputs:
     azureSubscription: 'AzureResourceConnection'
     action: 'DeleteRG'
-    resourceGroupName: '$(RESOURCEGROUP_NAME)'
+    resourceGroupName: '$(RESOURCE_GROUP)'
     location: $(LOCATION)
   displayName: 'Delete resources in Azure'
 
