aml workspace svc cleanup

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,6 @@ BUILD_BUILDID = '001'
 WORKSPACE_NAME = 'aml-workspace'
 EXPERIMENT_NAME = ''
 SCRIPT_FOLDER = './'
-WORKSPACE_SVC_CONNECTION = 'aml-workspace-svc'
 
 # AML Compute Cluster Config
 AML_COMPUTE_CLUSTER_NAME = 'train-cluster'
@@ -37,4 +36,4 @@ SOURCES_DIR_TRAIN = 'code'
 DB_CLUSTER_ID = ''
 
 # Optional. Container Image name for image creation
-IMAGE_NAME = 'ml-trained'
+IMAGE_NAME = 'mltrained'
