Fix trigger to delete environment

--- a/environment_setup/iac-remove-environment.yml
+++ b/environment_setup/iac-remove-environment.yml
@@ -1,10 +1,5 @@
-trigger:
-  branches:
-    include:
-    - master
-  paths:
-    include:
-    - environment_setup/arm-templates/*
+pr: none
+trigger: none
 
 pool:
   vmImage: 'ubuntu-latest'
