--- a/.pipelines/azdo-base-pipeline.yml
+++ b/.pipelines/azdo-base-pipeline.yml
@@ -7,12 +7,12 @@ steps:
    flake8 --output-file=$(Build.BinariesDirectory)/lint-testresults.xml --format junit-xml  
   workingDirectory: '$(Build.SourcesDirectory)'
   displayName: 'Run code quality tests'
-  enabled: 'false'
+  enabled: 'true'
   
 - script: |
    pytest --junitxml=$(Build.BinariesDirectory)/unit-testresults.xml $(Build.SourcesDirectory)/tests/unit
   displayName: 'Run unit tests'
-  enabled: 'false'
+  enabled: 'true'
   env:
     SP_APP_SECRET: '$(SP_APP_SECRET)'
 
