Switch CI to use new AzureML agentless execution task (#101)

--- a/.env.example
+++ b/.env.example
@@ -7,13 +7,13 @@ SP_APP_ID = ''
 SP_APP_SECRET = ''
 RESOUCE_GROUP = 'mlops-rg'
 
-# Mock build/release ID for local testing - update ReleaseID each "release"
+# Mock build/release ID for local testing
 BUILD_BUILDID = '001'
-RELEASE_RELEASEID = '001'
 
 # Azure ML Workspace Variables
-WORKSPACE_NAME = ''
+WORKSPACE_NAME = 'aml-workspace'
 EXPERIMENT_NAME = ''
+SCRIPT_FOLDER = './'
 
 # AML Compute Cluster Config
 AML_COMPUTE_CLUSTER_NAME = 'train-cluster'
@@ -36,4 +36,4 @@ SOURCES_DIR_TRAIN = 'code'
 DB_CLUSTER_ID = ''
 
 # Optional. Container Image name for image creation
-IMAGE_NAME = 'ml-trained'
+IMAGE_NAME = 'mltrained'
