--- a/.pipelines/azdo-ci-build-train.yml
+++ b/.pipelines/azdo-ci-build-train.yml
@@ -47,8 +47,10 @@ stages:
     steps:
     - script: |
         python $(Build.SourcesDirectory)/ml_service/pipelines/run_train_pipeline.py
+        # Set AMLPIPELINEID variable for next AML Pipeline task in next job
         source $(Build.SourcesDirectory)/tmp.sh
         echo "##vso[task.setvariable variable=AMLPIPELINEID;isOutput=true]$AMLPIPELINE_ID"
+        rm $(Build.SourcesDirectory)/tmp.sh
       name: 'getpipelineid'
       displayName: 'Get Pipeline ID'
       env:
