Multi-stage pipeline + scoring observability
Builds on top of PR #121, and:
- Replaces separate build + release pipelines with a single multi-stage pipeline with stages for Build, Train, ACI, AKS and Webapp deployment.
- ACI, AKS and Webapp deployment are optionally enabled (through Variables).
- Added example of custom traces (logging) and correlating traces with requests with Kusto queries.
- Added example of distributed tracing (client passes a trace header, logged by the scoring service).

![image](https://user-images.githubusercontent.com/22099722/69975882-52306580-1528-11ea-9705-65dc2ab737ea.png)

--- a/.pipelines/azdo-base-pipeline.yml
+++ b/.pipelines/azdo-base-pipeline.yml
@@ -10,7 +10,7 @@ steps:
   enabled: 'true'
   
 - script: |
-   pip install --user -r $(Build.SourcesDirectory)/tests/requirements.txt
+   pip install --user -r $(Build.SourcesDirectory)/tests/requirements.txt && \
    pytest --junitxml=$(Build.BinariesDirectory)/unit-testresults.xml $(Build.SourcesDirectory)/tests/unit
   displayName: 'Run unit tests'
   enabled: 'true'
